adjust image overflow issue chrome.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -512,6 +512,7 @@ a {
     @media(min-width: 980px) {
         &__img {
             flex: 0 0 50%;
+            max-width: 565px;
         }
 
         &__text-box {
